<resources>
    <string name="app_name">比邻社交</string>

    <string name="message_permission_rationale">授予下列权限以继续程序:\n\n%1$s</string>
    <string name="message_overlay_failed">您的电话不允许我们使用其他应用程序.</string>
    <string name="message_permission_always_failed">我们需要以下权限，请在设置中为我们开启：\n\n%1$s</string>
    <string name="setting" translatable="false">设置</string>
    <string name="resume" translatable="false">重试</string>
    <string name="cancel" translatable="false">取消</string>

    <string name="error_phone" translatable="false">手机号码格式错误</string>
    <string name="error_phone1" translatable="false">手机号码或验证码为空</string>
    <string name="error_" translatable="false">请输入完整</string>
    <string name="error_nickname" translatable="false">请输入您的昵称</string>
    <string name="error_pwd_length" translatable="false">密码位于6~16位</string>
    <string name="please_phone" translatable="false">请输入手机号码</string>
    <string name="please_code" translatable="false">请输入短信验证码</string>
    <string name="please_pwd1" translatable="false">请再次输入密码</string>
    <string name="please_pwd2" translatable="false">两次密码不一致</string>
    <string name="please_pwd3" translatable="false">请输入密码</string>
    <string name="error_1" translatable="false">请阅读协议</string>
    <string name="login" translatable="false">登录</string>
    <string name="login1" translatable="false">立即登录</string>
    <string name="registration" translatable="false">立即注册</string>
    <string name="forget" translatable="false">忘记密码</string>
    <string name="sure" translatable="false">完成</string>
    <string name="sure1" translatable="false">保存</string>
    <string name="set_name_head" translatable="false">设置昵称和头像</string>
    <string name="report" translatable="false">举报</string>
    <string name="nick" translatable="false">昵称：</string>
    <string name="signature" translatable="false">个性签名：</string>
    <string name="address" translatable="false">选择地区：</string>

    <string name="yyc_4" translatable="false">快链报</string>
    <string name="me_follow" translatable="false">我的关注</string>
    <string name="yyc_1" translatable="false">昵称设置：</string>
    <string name="yyc_2" translatable="false">头像设置：</string>
    <string name="yyc_3" translatable="false">昵称不超过12个字</string>
    <string name="yyc_5" translatable="false">点击评论动态</string>
    <string name="yyc_6" translatable="false">把您的想法写下来吧~</string>
    <string name="yyc_7" translatable="false">至少选择一样发布</string>
    <string name="yyc_8" translatable="false">请输入现在的手机号码</string>
    <string name="yyc_9" translatable="false">留下您宝贵的意见~</string>
    <string name="yyc_10" translatable="false">您的联系方式（QQ/邮箱/手机号）:</string>
    <string name="add" translatable="false">添加</string>
    <string name="circle_desc" translatable="false">动态详情</string>
    <string name="send" translatable="false">发送</string>
    <string name="adv" translatable="false">广告 V</string>
    <string name="look_desc" translatable="false">查看详情</string>
    <string name="user_page" translatable="false">他的主页</string>
    <string name="me_page" translatable="false">我的主页</string>
    <string name="me_cirle" translatable="false">我的动态</string>
    <string name="me_set" translatable="false">个人设置</string>
    <string name="set" translatable="false">设置</string>
    <string name="cal_follow" translatable="false">取消关注</string>
    <string name="information" translatable="false">我的资料</string>
    <string name="uptada_pwd" translatable="false">密码修改</string>
    <string name="uptada_phone" translatable="false">更改绑定手机</string>
    <string name="common_problems" translatable="false">常见问题</string>
    <string name="suggestion" translatable="false">意见箱</string>
    <string name="about_us" translatable="false">关于我们</string>
    <string name="log_out" translatable="false">退出登录</string>
    <string name="current_pwd" translatable="false">当前密码：</string>
    <string name="new_pwd" translatable="false">新的密码：</string>
    <string name="new_pwd2" translatable="false">确认密码：</string>
    <string name="please_current_pwd" translatable="false">请输入当前的密码</string>
    <string name="please_new_pwd" translatable="false">请输入新的密码</string>
    <string name="please_new_pwd2" translatable="false">请确认新的密码</string>
    <string name="please_code1" translatable="false">请输入验证码</string>
    <string name="submit" translatable="false">提交</string>
    <string name="phone" translatable="false">手机号：</string>
    <string name="code" translatable="false">验证码：</string>
    <string name="bind_phone" translatable="false">绑定手机号</string>


</resources>
