<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/include_top"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_phone"
            android:background="@color/white"
            android:padding="@dimen/px30"
            android:layout_width="match_parent"
            android:drawableRight="@mipmap/my_icon_return"
            style="@style/Tv15black"/>

    <View
            style="@style/divider_1"/>

    <LinearLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginLeft="@dimen/px30"
                android:text="@string/current_pwd"
                style="@style/Tv15black"/>

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_old_pwd"
                android:background="@null"
                android:padding="@dimen/px30"
                android:maxLength="16"
                android:inputType="textPassword"
                android:hint="@string/please_current_pwd"
                android:textSize="@dimen/size30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
            android:layout_marginTop="@dimen/px20"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginLeft="@dimen/px30"
                android:text="@string/new_pwd"
                style="@style/Tv15black"/>

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_pwd"
                android:background="@null"
                android:padding="@dimen/px30"
                android:maxLength="16"
                android:inputType="textPassword"
                android:hint="@string/please_new_pwd"
                android:textSize="@dimen/size30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <View
            style="@style/divider_1"/>

    <LinearLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginLeft="@dimen/px30"
                android:text="@string/new_pwd2"
                style="@style/Tv15black"/>

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_pwd1"
                android:background="@null"
                android:padding="@dimen/px30"
                android:inputType="textPassword"
                android:hint="@string/please_new_pwd2"
                android:maxLength="16"
                android:textSize="@dimen/size30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <com.flyco.roundview.RoundTextView
            android:id="@+id/bt_sure"
            app:rv_backgroundColor="@color/red_FF5A60"
            app:rv_backgroundPressColor="@color/white_f4f4f4"
            android:text="@string/submit"
            style="@style/roundTextView"/>

</LinearLayout>