<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/include_top"/>


    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_text"
                    android:layout_margin="@dimen/size30"
                    android:minLines="10"
                    android:gravity="top"
                    android:padding="@dimen/px20"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:hint="@string/yyc_9"
                    android:textSize="@dimen/size30"
                    android:layout_height="wrap_content"/>


            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_content"
                    android:layout_margin="@dimen/size30"
                    android:minLines="1"
                    android:gravity="top"
                    android:padding="@dimen/px20"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:hint="@string/yyc_10"
                    android:textSize="@dimen/size30"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <com.flyco.roundview.RoundTextView
            android:id="@+id/bt_sure"
            app:rv_backgroundColor="@color/red_FF5A60"
            app:rv_backgroundPressColor="@color/white_f4f4f4"
            android:text="@string/submit"
            style="@style/roundTextView"/>

</LinearLayout>